welcome.lessons.welcome.loopfor.LoopStairs.scala.error
Runner:5: error: illegal start of simple expression
	}gauche()
        ^Runner:12: error: Unmatched closing brace '}' ignored here
	}
        ^Runner:13: error: eof expected but '}' found.
}
^